# AKIRS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ros/: README.md  image_processor_IR.cpp
